docs: fix broken animated flowchart CSS
It looks like one of the recent Mermaid updates changed how the Mermaid
flowcharts use CSS, so `stroke-dasharray: 0;` doesn't work anymore.

It's not too big of a deal, we can use `-.->` dashed arrows instead,
since they are already dashed.

--- a/test-positive/flowchart1.css
+++ b/test-positive/flowchart1.css
@@ -1,5 +1,4 @@
-.path {
-  stroke-dasharray: 6;
+.flowchart-link {
   animation: dash 30s linear infinite;
 }
 
